Stark Bücher bestellt :D

--- a/Geschichte/Abiturvorbereitung/17.01.2014 - Abiturworkshop.md
+++ b/Geschichte/Abiturvorbereitung/17.01.2014 - Abiturworkshop.md
@@ -1,4 +1,3 @@
 # Abiturworkshop
 
-* Themenübersicht zu den Abiturthemen: nrw-standardsicherung.de
-* Stark-Bücher bestellen!!!
+* Themen Übersicht zu den Abiturthemen: nrw-standardsicherung.de
